--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -g history-limit 10000
 
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 bind h select-pane -L
 bind j select-pane -D
