--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ set -g pane-base-index 1
 
 set -g history-limit 10000
 
+set -sg escape-time 1
+
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
