--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,49 +1,65 @@
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-bind r source-file ~/.tmux.conf \; display "Reloading config..."
+bind r source-file ~/.tmux.conf
 
 set -g base-index 1
 set -g pane-base-index 1
 
-set -g history-limit 10000
+set -g history-limit 30000
 
-set -sg escape-time 1
+set -sg escape-time 0
 
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-x split-window -v -c "#{pane_current_path}"
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind -n M-H select-window -t :-
+bind -n M-L select-window -t :+
+
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
+bind-key -n M-0 select-window -t :=0
+bind-key -n M-1 select-window -t :=1
+bind-key -n M-2 select-window -t :=2
+bind-key -n M-3 select-window -t :=3
+bind-key -n M-4 select-window -t :=4
+bind-key -n M-5 select-window -t :=5
+bind-key -n M-6 select-window -t :=6
+bind-key -n M-7 select-window -t :=7
+bind-key -n M-8 select-window -t :=8
+bind-key -n M-9 select-window -t :=9
+
 
 bind H resize-pane -L 2
 bind J resize-pane -D 2
 bind K resize-pane -U 2
 bind L resize-pane -R 2
 
+set -g status-keys emacs
+
 set -g status-style fg=white
 setw -g window-status-current-style fg=green
-
 setw -g pane-border-style fg=white
 setw -g pane-active-border-style fg=green
-
 set -g message-style fg=green,bold
-
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-
-set -g status-right "#[fg=cyan]%d %b %R"
-
+set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-right '#{?client_prefix,#[reverse]P#[noreverse], }'
 set -g status-justify centre
 
 setw -g monitor-activity on
@@ -53,13 +69,8 @@ setw -g mouse off
 
 set -g default-terminal "screen-256color"
 
-set -g default-shell /bin/zsh
+#set -g default-shell /bin/zsh
 
 set-window-option -g mode-keys vi
 
-# Vim style
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
