--- a/.i3/config
+++ b/.i3/config
@@ -19,7 +19,7 @@ workspace_auto_back_and_forth yes
 
 floating_modifier $mod
 
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty -e zsh -c 'tmux new-session -A -s default'
 
 bindsym $mod+Shift+q kill
 
