--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,12 +43,7 @@ bind-key -n M-6 select-window -t :=6
 bind-key -n M-7 select-window -t :=7
 bind-key -n M-8 select-window -t :=8
 bind-key -n M-9 select-window -t :=9
-
-
-bind H resize-pane -L 2
-bind J resize-pane -D 2
-bind K resize-pane -U 2
-bind L resize-pane -R 2
+bind-key -n M-f resize-pane -Z
 
 set -g status-keys emacs
 
