--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,4 +66,4 @@ set -g default-terminal "screen-256color"
 
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xsel -b"
