--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,10 +30,16 @@ bindsym $mod+Shift+l move right
 
 bindsym $mod+f fullscreen
 
+bindsym $mod+v split v
+bindsym $mod+semicolon split h
+bindsym $mod+a focus parent
+
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
-bindsym $mod+space floating toggle
+
+bindsym $mod+Shift+space floating toggle
+bindsym $mod+space focus mode_toggle
 
 hide_edge_borders smart
 
