--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reload config"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -67,3 +67,4 @@ set -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "xsel -b"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "xsel -b" \; send-keys -X cancel
