--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,4 +67,4 @@ set -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "xsel -b"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "xsel -b" \; send-keys -X cancel
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -b"
