--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,3 +68,15 @@ set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "xsel -b"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -b"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'Morantron/tmux-fingers'
+
+set -g @fingers-key f
+set -g @fingers-copy-command 'xclip -selection clipboard'
+set -g @fingers-copy-command-uppercase 'tmux paste-buffer'
+
+bind-key -n M-y run-shell "$HOME/.tmux/plugins/tmux-fingers/scripts/tmux-fingers.sh"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
