--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ set -g history-limit 30000
 
 set -sg escape-time 0
 
+bind -n C-k send-keys -R \; clear-history
+
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
