--- a/.jrebel/jrebel.properties
+++ b/.jrebel/jrebel.properties
@@ -1,3 +1,3 @@
-#Tue Aug 06 16:50:24 MSK 2019
 rebel.preferred.license=0
+rebel.properties.version=2
 rebel.license=/home/mezlogo/.jrebel/jrebel.lic
