--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,6 +14,7 @@ workspace_auto_back_and_forth yes
 
 floating_modifier $mod
 
+bindsym $mod+t exec deepin-screenshot
 bindsym $mod+Return exec alacritty -e zsh -c 'tmux new-session -A -s default'
 bindsym $mod+Shift+q kill
 bindsym $mod+d exec rofi -theme DarkBlue -show drun -lines 20
