--- a/.config/i3/config
+++ b/.config/i3/config
@@ -117,5 +117,5 @@ bar {
 client.focused          #ffffff #000000 #00ff00 #ffffff   #00ff00
 client.unfocused        #ffffff #000000 #ffffff #ffffff   #000000
 
-exec clipit
+exec copyq
 exec "xkbcomp -w 0 ~/.config/xkb/xkbdump $DISPLAY"
