--- a/.gitconfig
+++ b/.gitconfig
@@ -11,7 +11,7 @@
     ll = "log --pretty=format:%Cgreen%h%Cred%cr%<(24)%C(#ff69b4)%an%C(white)%d%n%C(yellow)%s --numstat"
     t = describe --abbrev=0 --tags HEAD
     bdiff = "!f(){ git diff $(git merge-base $1 HEAD) $1; };f"
-    cap = !git cam 'New version' && git pom
+    cap = !git cam 'New version' && git push
     actualbr = !git reflog show --since=\"14 days ago\" --all | awk '{if(\"checkout:\" == $3) print($6 \"\\n\" $8)}' | sort | uniq
     oldbr = !bash -c 'git br --format=\"%(refname:short)\" | sort | uniq | comm -3 - <(git actualbr)'
     when = !stat -c %y .git/FETCH_HEAD
