--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -51,5 +51,6 @@
     "<C-w>": false,
     "<C-c>": false
   },
-  "python.pythonPath": "/usr/bin/python"
+  "python.pythonPath": "/usr/bin/python",
+  "python.showStartPage": true
 }
