--- a/.gitconfig
+++ b/.gitconfig
@@ -15,5 +15,6 @@
     actualbr = !git reflog show --since=\"14 days ago\" --all | awk '{if(\"checkout:\" == $3) print($6 \"\\n\" $8)}' | sort | uniq
     oldbr = !bash -c 'git br --format=\"%(refname:short)\" | sort | uniq | comm -3 - <(git actualbr)'
     when = !stat -c %y .git/FETCH_HEAD
-[include]
-    path = .gitconfig.local
+[user]
+	email = dmezentsev@marathonbet.ru
+	name = Mezentsev Denis
