--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.renderWhitespace": "all",
-  "editor.fontSize": 24,
+  "editor.fontSize": 12,
   "editor.cursorStyle": "block-outline",
+  "window.zoomLevel": 1,
   "workbench.activityBar.visible": false,
   "workbench.startupEditor": "newUntitledFile",
   "explorer.confirmDelete": false,
@@ -51,5 +52,8 @@
     "<C-c>": false
   },
   "python.pythonPath": "/usr/bin/python",
-  "python.showStartPage": true
+  "python.showStartPage": true,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
