--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -55,5 +55,6 @@
   "python.showStartPage": true,
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "debug.javascript.autoAttachFilter": "smart"
 }
