--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,7 +18,7 @@ bindsym $mod+t exec deepin-screenshot
 bindsym $mod+Return exec alacritty -e zsh -c 'tmux new-session -A -s default'
 bindsym $mod+Shift+q kill
 bindsym $mod+d exec rofi -show drun
-bindsym $mod+x exec CM_LAUNCHER=rofi clipmenu
+bindsym $mod+x exec alacritty -e sh -c "greenclip print | fzf -e | sed 's/\xC2\xA0/\x0A/g' | xsel -b"
 
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -119,3 +119,5 @@ client.focused          #ffffff #000000 #00ff00 #ffffff   #00ff00
 client.unfocused        #ffffff #000000 #ffffff #ffffff   #000000
 
 exec "xkbcomp -w 0 ~/.config/xkb/xkbdump $DISPLAY"
+exec "greenclip daemon"
+
