--- a/.gitconfig
+++ b/.gitconfig
@@ -18,3 +18,6 @@
 [user]
 	email = dmezentsev@marathonbet.ru
 	name = Mezentsev Denis
+[filesystem "Oracle Corporation|11.0.11|/dev/mapper/panbetdir"]
+	timestampResolution = 6000 nanoseconds
+	minRacyThreshold = 4052 microseconds
