--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -2,7 +2,6 @@
   "editor.renderWhitespace": "all",
   "editor.fontSize": 12,
   "editor.cursorStyle": "block-outline",
-  "window.zoomLevel": 2,
   "workbench.activityBar.visible": false,
   "workbench.startupEditor": "newUntitledFile",
   "explorer.confirmDelete": false,
@@ -58,5 +57,6 @@
   },
   "debug.javascript.autoAttachFilter": "smart",
   "clangd.path": "/home/mezlogo/.config/Code - OSS/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/12.0.0/clangd_12.0.0/bin/clangd",
-  "editor.largeFileOptimizations": false
+  "editor.largeFileOptimizations": false,
+  "window.zoomLevel": 1
 }
