--- a/.gitconfig
+++ b/.gitconfig
@@ -15,9 +15,10 @@
     actualbr = !git reflog show --since=\"14 days ago\" --all | awk '{if(\"checkout:\" == $3) print($6 \"\\n\" $8)}' | sort | uniq
     oldbr = !bash -c 'git br --format=\"%(refname:short)\" | sort | uniq | comm -3 - <(git actualbr)'
     when = !stat -c %y .git/FETCH_HEAD
+    demo = "!f(){ b=$(git rev-parse --abbrev-ref HEAD); bd=\"$b\"_DEMO; \
+        git stash && git branch -D $bd ; git checkout -b $bd origin/master_hotfix \
+            && git log --reverse --pretty=format:\"%H\" origin/master..$b | xargs -L1 git cherry-pick \
+            && git push origin -f $bd && git checkout $b && git stash pop ; };f"
 [user]
 	email = dmezentsev@marathonbet.ru
 	name = Mezentsev Denis
-[filesystem "Oracle Corporation|11.0.11|/dev/mapper/panbetdir"]
-	timestampResolution = 6000 nanoseconds
-	minRacyThreshold = 4052 microseconds
