--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -52,7 +52,7 @@
     "editor.lineNumbers": "on",
     "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
     "editor.wordWrap": "off",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "editor.renderWhitespace": "all",
     "editor.cursorStyle": "line",
     "editor.detectIndentation": true,
