--- a/.config/i3/config
+++ b/.config/i3/config
@@ -77,7 +77,7 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace0
 
 assign [class="FF_DEFAULT"] $workspace1
-assign [class="FF_SOCIAL"] $workspace3
+assign [class="FF_CARE"] $workspace3
 assign [class="FF_WORK"] $workspace4
 assign [class="Pidgin"] $workspace9
 assign [class="Thunderbird"] $workspace9
