--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -41,6 +41,7 @@
     "editor.formatOnSaveMode": "modificationsIfAvailable",
     "editor.formatOnType": true,
     "editor.minimap.showSlider": "always",
+    "editor.bracketPairColorization.enabled": true,
     "explorer.openEditors.visible": 0,
     "prettier.singleQuote": true,
     "prettier.enable": true,
