--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -59,6 +59,5 @@
     "workbench.activityBar.visible": false,
     "debug.javascript.autoAttachFilter": "always",
     "editor.largeFileOptimizations": false,
-    "editor.unicodeHighlight.ambiguousCharacters": false,
-    "window.zoomLevel": 2
+    "editor.unicodeHighlight.ambiguousCharacters": false
 }
