--- a/.config/pikaur.conf
+++ b/.config/pikaur.conf
@@ -2,21 +2,21 @@
 alwaysshowpkgorigin = no
 develpkgsexpiration = -1
 upgradesorting = versiondiff
-showdownloadsize = yes
+showdownloadsize = no
 ignoreoutofdateaurupgrades = no
 
 [build]
 keepbuilddir = no
-keepdevbuilddir = no
+keepdevbuilddir = yes
 keepbuilddeps = no
 skipfailedbuild = no
 alwaysusedynamicusers = no
 ignorearch = no
 
 [review]
-noedit = yes
-donteditbydefault = yes
-nodiff = yes
+noedit = no
+donteditbydefault = no
+nodiff = no
 gitdiffargs = --ignore-space-change,--ignore-all-space
 diffpager = auto
 hidedifffiles = .SRCINFO
