--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -61,5 +61,8 @@
     "editor.largeFileOptimizations": false,
     "editor.unicodeHighlight.ambiguousCharacters": false,
     "extensions.ignoreRecommendations": true,
-    "window.zoomLevel": 2
+    "window.zoomLevel": 2,
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    }
 }
