--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -64,5 +64,8 @@
     "window.zoomLevel": 2,
     "[json]": {
         "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "[shellscript]": {
+        "editor.defaultFormatter": "foxundermoon.shell-format"
     }
 }
