--- a/.config/pikaur.conf
+++ b/.config/pikaur.conf
@@ -34,6 +34,7 @@ aursearchsorting = hottest
 displaylastupdated = no
 groupbyrepository = yes
 reversesearchsorting = no
+warnaboutpackageupdates = 
 
 [misc]
 sudoloopinterval = 59
