--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -73,5 +73,9 @@
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
-    "window.zoomLevel": 2
+    "[python]": {
+        "editor.formatOnType": true
+    },
+    "git.openRepositoryInParentFolders": "never",
+    "window.zoomLevel": 1
 }
