--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-bind r source-file ~/.tmux.conf \; display "Reload config"
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Reload config"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -75,4 +75,5 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'RTBHOUSE/tmux-picker'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run '/usr/share/tmux-plugin-manager/tpm'
+# run -b '~/.tmux/plugins/tpm/tpm'
