--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 User dmezentsev
 
-CanonicalizeHostname yes
-CanonicalDomains local
+#CanonicalizeHostname yes
+#CanonicalDomains local
 
 Compression yes
 
