--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,8 @@ workspace_auto_back_and_forth yes
 
 floating_modifier $mod
 
-bindsym $mod+t exec deepin-screenshot
+bindsym $mod+t exec flameshot gui ~/Donwloads
+#bindsym $mod+t exec deepin-screenshot
 bindsym $mod+Return exec alacritty -e zsh -c 'tmux new-session -A -s default'
 bindsym $mod+Shift+q kill
 bindsym $mod+d exec rofi -show drun
@@ -49,21 +50,25 @@ bindsym $mod+u sticky toggle
 
 hide_edge_borders smart
 
-set $workspace1 "1:"
-set $workspace2 "2:"
-set $workspace3 "3:"
-set $workspace4 "4:"
-set $workspace9 "9:"
-set $workspace0 "10:"
+set $workspace1 "1"
+set $workspace2 "2"
+set $workspace3 "3"
+set $workspace4 "4"
+set $workspace5 "5"
+set $workspace6 "6"
+set $workspace7 "7"
+set $workspace8 "8"
+set $workspace9 "9"
+set $workspace0 "10"
 
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
+bindsym $mod+5 workspace $workspace5
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
 bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace0
 
@@ -71,14 +76,24 @@ bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace0
 
-assign [class="FF_CARE"] $workspace3
+workspace $workspace1 output primary
+workspace $workspace2 output primary
+workspace $workspace3 output primary
+workspace $workspace4 output primary
+workspace $workspace5 output nonprimary
+workspace $workspace6 output primary
+workspace $workspace7 output primary
+workspace $workspace8 output primary
+workspace $workspace9 output primary
+workspace $workspace0 output primary
+
 assign [class="jetbrains-idea"] $workspace0
 
 mode "resize" {
@@ -120,6 +135,7 @@ bar {
 client.focused          #ffffff #000000 #00ff00 #ffffff   #00ff00
 client.unfocused        #ffffff #000000 #ffffff #ffffff   #000000
 
+#exec "setup_xrandr.sh"
 exec "xkbcomp -w 0 ~/.config/xkb/xkbdump $DISPLAY"
 exec "greenclip daemon"
 exec "dunst"
