--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,107 +1,5 @@
 set $mod Mod4
-
 floating_modifier $mod
-
-bindsym $mod+o exec "pactl set-sink-volume @DEFAULT_SINK@ -5% ; pkill -RTMIN+1 i3blocks"
-bindsym $mod+p exec "pactl set-sink-volume @DEFAULT_SINK@ +5% ; pkill -RTMIN+1 i3blocks"
-
-
-
-bindsym $mod+t exec flameshot gui ~/Donwloads
-#bindsym $mod+t exec deepin-screenshot
-bindsym $mod+Return exec alacritty -e zsh -c 'tmux new-session -A -s default'
-bindsym $mod+Shift+q kill
-bindsym $mod+d exec rofi -show drun
-bindsym $mod+x exec alacritty -e sh -c "greenclip print | fzf -e | sed 's/\xC2\xA0/\x0A/g' | sed -z '$ s/\n$//' | xsel -b"
-
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-bindsym $mod+f fullscreen
-
-bindsym $mod+v split v
-bindsym $mod+semicolon split h
-bindsym $mod+a focus parent
-
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-bindsym $mod+Shift+space floating toggle
-bindsym $mod+space focus mode_toggle
-
-bindsym $mod+u sticky toggle
-
-
-set $workspace1 "1"
-set $workspace2 "2"
-set $workspace3 "3"
-set $workspace4 "4"
-set $workspace5 "5"
-set $workspace6 "6"
-set $workspace7 "7"
-set $workspace8 "8"
-set $workspace9 "9"
-set $workspace0 "10"
-
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace $workspace9
-bindsym $mod+0 workspace $workspace0
-
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace $workspace9
-bindsym $mod+Shift+0 move container to workspace $workspace0
-
-workspace $workspace1 output primary
-workspace $workspace2 output primary
-workspace $workspace3 output primary
-workspace $workspace4 output primary
-workspace $workspace5 output nonprimary
-workspace $workspace6 output primary
-workspace $workspace7 output primary
-workspace $workspace8 output primary
-workspace $workspace9 output primary
-workspace $workspace0 output primary
-
-assign [class="jetbrains-idea"] $workspace0
-
-mode "resize" {
-    set $step 200
-    bindsym h resize shrink width $step px or $step ppt
-    bindsym j resize grow height $step px or $step ppt
-    bindsym k resize shrink height $step px or $step ppt
-    bindsym l resize grow width $step px or $step ppt
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-title_align left
-#default_border none
 
 set $white "#ffffff"
 set $gray "#888888"
@@ -109,34 +7,20 @@ set $green "#00ff00"
 set $red "#ff0000"
 set $black "#000000"
 
-bar {
-    status_command i3blocks
-    tray_output primary
-    position top
-    mode hide
-    hidden_state hide
-    modifier $mod
-    colors {
-        background $black
-        statusline $white
-        separator $green
-        #                  border  backgr. text
-        focused_workspace  $green $black $green
-        active_workspace   $white $black $white
-        inactive_workspace $gray  $black $gray
-        urgent_workspace   $red   $black $red
-    }
-}
+include keybinds
+include workspaces
+include bar
+include autostart
+
+title_align left
 
 # class                 border  backgr. text    indicator child_border
-client.focused          $green  $black #00ff00 #ffffff   #00ff00
-client.focused_inactive #353439 #9FEE00 #7B9F35
-client.unfocused        $white  $black #ffffff #ffffff   $black
+client.focused          $green  $white  $white  $white    $green
+client.unfocused        $gray   $white  $white  $white    $gray
 
 default_floating_border pixel 2
 default_border pixel 1
 for_window [floating] border pixel 2
-# for_window [class="^.*"] border pixel 1
 
 font pango:DejaVuSansMono 14
 
@@ -144,9 +28,3 @@ focus_follows_mouse no
 popup_during_fullscreen smart
 workspace_auto_back_and_forth yes
 hide_edge_borders smart
-
-#exec "setup_xrandr.sh"
-exec "xkbcomp -w 0 ~/.config/xkb/xkbdump $DISPLAY"
-exec "greenclip daemon"
-exec "dunst"
-exec "nm-applet"
